--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -12,6 +12,10 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <title>Vite + React + TS</title>
+  <script>
+    window.global = window;
+    var exports = {};
+  </script>
 </head>
 
 <body>
